# data-science-template

./: .coveragerc.jinja  .env.docker  .env.template.jinja  .envrc  .gitignore  .pre-commit-config.yaml.jinja  CITATION.cff.jinja  CODEOFCONDUCT.md  Dockerfile  Dockerfile.jinja  Jenkinsfile.jinja  LICENSE.jinja  Makefile.jinja  README.md  README.md.jinja  SECURITY.md.jinja  conftest.py  copier.yml  dev.yaml  docker-compose.yaml.jinja  main.py  pyproject.toml.jinja  {{ 'LICENSE' if license else '' }}.jinja
deployment-manifests/base/: deployment.yaml  service.yaml
deployment-manifests/overlays/dev/: kustomization.yaml  patch-deployment.yaml
deployment-manifests/overlays/prod/: kustomization.yaml  patch-deployment.yaml
docs/: mkdocs.yaml.jinja
docs/mkdocs/: mkdocs.yaml
docs/overrides/: main.html
docs/overrides/assets/javascripts/: custom.9e5da760.min.js  iconsearch_index.json
docs/overrides/assets/stylesheets/: custom.7c86dd97.min.css
docs/templates/: bug_report_template.md  modelcard.md  pull_request_template.md.jinja  {{ 'datasetcard.md' if dataset_card else '' }}.jinja
lib_a/: pyproject.toml  pyproject.toml.jinja
lib_a/lib_a/: __init__.py  core.py
lib_a/tests/: test_core.py
libs/: pyproject.toml.jinja
libs/lib_a/: __init__.py
notebooks/: 01_eda.ipynb
{{project_name}}/: __init__.py.jinja  dataset.py.jinja  features.py.jinja  main.py  plot.py.jinja  utils.py.jinja
{{project_name}}/modeling/: __init__.py.jinja  predict.py.jinja  train.py.jinja
