[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lib-a"
version = "0.1.0"
description = "A local Python package"
authors = [{name = "User", email = "user@example.com"}]
dependencies = []

[project.urls]
Homepage = "https://github.com/user/lib-a"

[tool.hatch.build.targets.wheel]
packages = ["lib_a"]
